--- a/Week_1/1.1-python.ipynb
+++ b/Week_1/1.1-python.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I need to buy: cheese\n",
+      "I need to buy: whole milk\n",
+      "I need to buy: kefir\n",
+      "I need to buy: tofu four-pack\n",
+      "I need to buy: kale\n",
+      "I need to buy: oranges\n",
+      "I need to buy: ham\n",
+      "I need to buy: ben & jerry's\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your for loop\n"
+    "# Write your for loop\n",
+    "for item in items:\n",
+    "    print(f'I need to buy: {item}')"
    ]
   },
   {
@@ -78,21 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace None with appropriate code to create your dictionary\n",
-    "grocery_dict = None"
+    "grocery_dict = dict(zip(items, cost))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 2.79,\n",
+       " 'whole milk': 3.42,\n",
+       " 'kefir': 4.5,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'kale': 2.75,\n",
+       " 'oranges': 3.64,\n",
+       " 'ham': 25.0,\n",
+       " \"ben & jerry's\": 5.29}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "grocery_dict"
@@ -109,13 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.39"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate your sum\n"
+    "# Calculate your sum\n",
+    "sum(grocery_dict.values())\n",
+    "    "
    ]
   },
   {
@@ -133,22 +181,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.39"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here to only add items to our total if they're <$10\n"
+    "# Code here to only add items to our total if they're <$10\n",
+    "sum_cost_cheaper_10 = sum (value for value in grocery_dict.values() if value < 10)\n",
+    "sum_cost_cheaper_10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "sum(price for price in cost if price < 10) == sum_cost_cheaper_10"
    ]
   },
   {
@@ -168,7 +241,7 @@
     "\n",
     "Can you describe the difference between `print` and `return` as a function output? \n",
     "\n",
-    "- \n"
+    "-  Return evaluates a function to return a value, while print doesn't use a function necessarily.\n"
    ]
   },
   {
@@ -184,21 +257,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I need to buy: cheese\n",
+      "I need to buy: whole milk\n",
+      "I need to buy: kefir\n",
+      "I need to buy: tofu four-pack\n",
+      "I need to buy: kale\n",
+      "I need to buy: oranges\n",
+      "I need to buy: ham\n",
+      "I need to buy: ben & jerry's\n"
+     ]
+    }
+   ],
    "source": [
-    "# You may want to paste your previous for loop here\n"
+    "# You may want to paste your previous for loop here\n",
+    "for item in items:\n",
+    "    print(f'I need to buy: {item}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace pass with the appropriate code\n",
     "def calc_frugal_total(dictionary):\n",
+    "    total = sum(value for value in dictionary.values() if value < 10)\n",
+    "    return total\n",
     "    '''\n",
     "    Returns a frugal grocery list sum, that only includes items that cost less\n",
     "    than $10\n",
@@ -211,9 +303,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.39"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes to check your work\n",
     "calc_frugal_total(grocery_dict)"
@@ -230,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,20 +361,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"ben & jerry's\",\n",
+       " 'cheese',\n",
+       " 'ham',\n",
+       " 'kale',\n",
+       " 'kefir',\n",
+       " 'oranges',\n",
+       " 'tofu four-pack',\n",
+       " 'whole milk',\n",
+       " 'toilet paper pack',\n",
+       " 'clorox spray',\n",
+       " 'kleenex',\n",
+       " 'fancy grain-free kibble',\n",
+       " 'squeaky toy',\n",
+       " 'treats']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code to write your nested loops\n"
+    "# Code to write your nested loops\n",
+    "list_items = []\n",
+    "for category in shopping_dict.values():\n",
+    "    for item in category.keys():\n",
+    "        list_items.append(item)\n",
+    "list_items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"ben & jerry's\",\n",
+       " 'cheese',\n",
+       " 'ham',\n",
+       " 'kale',\n",
+       " 'kefir',\n",
+       " 'oranges',\n",
+       " 'tofu four-pack',\n",
+       " 'whole milk',\n",
+       " 'toilet paper pack',\n",
+       " 'clorox spray',\n",
+       " 'kleenex',\n",
+       " 'fancy grain-free kibble',\n",
+       " 'squeaky toy',\n",
+       " 'treats']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "list_items"
    ]
   },
   {
@@ -285,20 +442,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace pass with appropriate code\n",
     "def write_grocery_list(nested_dict):\n",
-    "    pass"
+    "    list_item = []\n",
+    "    for category in nested_dict.values():\n",
+    "        for item in category.keys():\n",
+    "            list_item.append(item)\n",
+    "    return (list_item, sum(category.values()))\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([\"ben & jerry's\",\n",
+       "  'cheese',\n",
+       "  'ham',\n",
+       "  'kale',\n",
+       "  'kefir',\n",
+       "  'oranges',\n",
+       "  'tofu four-pack',\n",
+       "  'whole milk',\n",
+       "  'toilet paper pack',\n",
+       "  'clorox spray',\n",
+       "  'kleenex',\n",
+       "  'fancy grain-free kibble',\n",
+       "  'squeaky toy',\n",
+       "  'treats'],\n",
+       " 78.2)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes to check your work\n",
     "write_grocery_list(shopping_dict)"
@@ -329,28 +516,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code your leveled-up function here\n"
+    "# Run this cell without changes\n",
+    "shopping_dict = {'Groceries': {\"ben & jerry's\": 5.29, 'cheese': 2.79, \n",
+    "                               'ham': 25.0, 'kale': 2.75, 'kefir': 4.5, \n",
+    "                               'oranges': 3.64, 'tofu four-pack': 12.0, \n",
+    "                               'whole milk': 3.42},\n",
+    "                 'House Supplies': {'toilet paper pack': 16.50, \n",
+    "                                    'clorox spray': 6.43, 'kleenex': 2.50, },\n",
+    "                 'Pet Supplies': {'fancy grain-free kibble': 65.25, \n",
+    "                                  'squeaky toy': 4.50, 'treats': 8.45}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code your leveled-up function here\n",
+    "def write_grocery_list(nested_dict):\n",
+    "    list_item = []\n",
+    "    total_cost = 0\n",
+    "    for category in nested_dict.values():\n",
+    "        if total_cost < 50:\n",
+    "            for key, item in category.items():\n",
+    "        \n",
+    "                if item < 20 and total_cost + item < 50:\n",
+    "                    total_cost += item\n",
+    "                    list_item.append(key)\n",
+    "    avg = total_cost/len(list_item)\n",
+    "        \n",
+    "\n",
+    "                    \n",
+    "                \n",
+    "            \n",
+    "    \n",
+    "    return (list_item, total_cost, avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([\"ben & jerry's\",\n",
+       "  'cheese',\n",
+       "  'kale',\n",
+       "  'kefir',\n",
+       "  'oranges',\n",
+       "  'tofu four-pack',\n",
+       "  'whole milk',\n",
+       "  'clorox spray',\n",
+       "  'kleenex',\n",
+       "  'squeaky toy'],\n",
+       " 47.82,\n",
+       " 4.782)"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check your work\n",
+    "write_grocery_list(shopping_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check your work\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -364,9 +614,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
